added angular and bootstrap
added angular and bootstrap
added in a few very basic bootstrap classes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link href="css/bootstrap.min.css" rel="stylesheet"></link>
+    <script src="scripts/angular.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
 </head>
 
 <body >
 
-<div>
+<div class="container">
     <h2>Hello Mike's World</h2>
     <p>This is the simplest hello world app for phonegap/cordova</p>
+    
+    <div class="row">
+        <div class="col-xs-6 bg-info">
+            <p>Size 6</p>
+        </div>
+        <div class="col-xs-4 bg-warning">
+            <p>Size 4</p>            
+        </div>
+        <div class="col-xs-2 bg-danger">            
+            <p>Size 2</p>
+        </div>
+    </div>
 </div>
 
 </body>
