--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 
 <div class="container">
     <h2>Hello Mike's World</h2>
-    <p>This is the simplest hello world app for phonegap/cordova</p>
+    <p>This is the evolution of a simplest hello world app for phonegap/cordova</p>
     
     <div class="row">
         <div class="col-xs-6 bg-info">
-            <p>Size 6</p>
+            <p>Take a picture from the device's camera</p>
+            <button class="btn btn-success"><span class="glyphicon glyphicon-camera"></span></button>
         </div>
-        <div class="col-xs-4 bg-warning">
-            <p>Size 4</p>            
-        </div>
-        <div class="col-xs-2 bg-danger">            
-            <p>Size 2</p>
+        <div class="col-xs-6 bg-warning">
+            <p>Get the location of the device</p>
+            <button class="btn btn-danger"><span class="glyphicon glyphicon-map-marker"></span></button>
         </div>
     </div>
 </div>
 
+    <script>
+        
+    </script>
 </body>
 </html>
